--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>be.ucll.testing</groupId>
-    <artifactId>AutomationExample</artifactId>
+    <artifactId>Groep4_Testing_Automation</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>automationexample</name>
+    <name>groep4_testing_automation</name>
     <packaging>war</packaging>
 
     <properties>
